services/downloads-standard/qbittorrent-vpn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-vpn
  namespace: downloads-standard
spec:
  type: ClusterIP
  selector:
    app: qbittorrent-vpn
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 41231
    targetPort: 41231
    protocol: TCP
    name: torrent-port
