services/downloads-standard/qbittorrent-vpn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-vpn
  namespace: downloads-standard
spec:
  ingressClassName: nginx
  rules:
  - host: qbittorrent.labmatt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent-vpn
            port:
              number: 8080
